@@ -10,6 +10,7 @@
 	sem_util.ads, exp_ch4.adb, exp_ch11.adb, exp_ch6.adb, cstand.adb,
 	sem_mech.adb, sem_ch6.adb, sem_ch8.adb, sem_ch11.adb, snames.ads-tmpl:
 	Remove VMS-specific code.
+	* gcc-interface/decl.c, gcc-interface/trans.c: Ditto.
 
 2014-08-01  Arnaud Charlet  <charlet@adacore.com>
 
